--- a/ansible-ipi-install/roles/shared-labs-prep/tasks/main.yml
+++ b/ansible-ipi-install/roles/shared-labs-prep/tasks/main.yml
@@ -49,6 +49,18 @@
         requirements: "{{ badfish_tempdir.path}}/requirements.txt"
         virtualenv_command: /usr/bin/python3 -m venv
         virtualenv: "{{ badfish_venv }}"
+
+    - name: detect python version
+      shell: |
+        {{ python_interpreter }} --version | awk '{print $2}'
+      register: python_version
+
+    - name: Include library
+      shell:
+        chdir: "{{ badfish_tempdir.path }}"
+        cmd: |
+          source {{ badfish_venv }}/bin/activate
+          ln -s {{ badfish_tempdir.path }}/src/helpers/ {{ badfish_venv }}/lib/python{{ python_version.stdout.split('.')[0] }}.{{ python_version.stdout.split('.')[1] }}/site-packages/helpers
   when: dell_nodes | length > 0
 
 - name: Clean network interfaces created by lab automation
