--- a/ansible-ipi-install/roles/bootstrap/defaults/main.yml
+++ b/ansible-ipi-install/roles/bootstrap/defaults/main.yml
@@ -67,4 +67,6 @@ scale:
         pub_nic: eno1np0
         prov_nic: ens1f1
         prov_nic_f04: ens3f1
-
+      r650:
+        pub_nic: eno12399np0
+        prov_nic: ens1f1
