--- a/ansible-ipi-install/roles/network-discovery/tasks/main.yml
+++ b/ansible-ipi-install/roles/network-discovery/tasks/main.yml
@@ -53,7 +53,7 @@
 - name: Set lab_pub_nics for master
   set_fact:
     lab_pub_nics: ["eno1"]
-  when: ( "'r640' in master_types" ) or ( "'r640' in worker_types" )
+  when: ( 'r640' in master_types ) or ( 'r640' in worker_types )
 
 - name: Setting public and prov nics 
   block:
