Updated Calico CRDs folder

--- a/ansible-ipi-install/roles/shared-labs-prep/tasks/main.yml
+++ b/ansible-ipi-install/roles/shared-labs-prep/tasks/main.yml
@@ -375,7 +375,7 @@
     - name: Enable Calico CNI
       copy:
         src: "{{ item }}"
-        dest: "{{ manifest_path }}/calico/{{ item }}"
+        dest: "{{ manifest_path }}/{{ item }}"
         mode: 0644
       with_items:
         - "00-namespace-tigera-operator.yaml"
