corrected ansible syntax

--- a/ansible-ipi-install/roles/shared-labs-prep/tasks/10_redfish_queue.yml
+++ b/ansible-ipi-install/roles/shared-labs-prep/tasks/10_redfish_queue.yml
@@ -1,7 +1,7 @@
 - name: Redfish job queue
   block:
     - name: Clear redfish job queues - {{ item }}
-      shell: {{ badfish_podman_cmd }}{{ item }} --clear-jobs --force
+      shell: "{{ badfish_podman_cmd }}{{ item }} --clear-jobs --force"
       register: clear_jobs
       until: clear_jobs is succeeded
       retries: 3
