--- a/ansible-ipi-install/roles/shared-labs-prep/tasks/20_set_director_mode.yml
+++ b/ansible-ipi-install/roles/shared-labs-prep/tasks/20_set_director_mode.yml
@@ -1,7 +1,7 @@
 - name: Set Director
   block:
     - name: Set nodes to director boot order (Dell)
-      shell: {{ badfish_podman_cmd }}{{ item }} -t director
+      shell: "{{ badfish_podman_cmd }}{{ item }} -t director"
       register: boot_order
       until: boot_order is succeeded
       retries: 3
@@ -15,7 +15,7 @@
         seconds: 300
 
     - name: Set nodes to director boot order (Dell)
-      shell: {{ badfish_podman_cmd }}{{ item }} -t director
+      shell: "{{ badfish_podman_cmd }}{{ item }} -t director"
       register: boot_order_re
       until: boot_order_re is succeeded
       retries: 5
