revert python interpreter

--- a/ansible-ipi-install/group_vars/all.yml
+++ b/ansible-ipi-install/group_vars/all.yml
@@ -49,12 +49,12 @@ routable_api: false
 
 
 #post-install
-post_install: "{{ lookup('env', 'POST_INSTALL')|default(false, true) }}"
+post_install: "{{ lookup('env', 'POST_INSTALL')|default(true, true) }}"
 openshift_toggle_ovn_patch: "{{ lookup('env', 'OVN_PATCH')|default(false, true) }}"
 openshift_ovn_image: "{{ lookup('env', 'OVN_IMAGE')|default('', true) }}"
 kubeconfig_path: "{{ lookup('env', 'KUBECONFIG_PATH')|default('/home/kni/clusterconfigs/auth/kubeconfig', true) }}"
 dittybopper_enable: "{{ lookup('env', 'ENABLE_DITTYBOPPER')|default(false, true) }}"
-infra_node_string_1: "{{ lookup('env', 'INFRA_NODE_STRING_1')|default('worker026-r640', true) }}"
-infra_node_string_2: "{{ lookup('env', 'INFRA_NODE_STRING_1')|default('worker027-r640', true) }}"
-workload_node_string: "{{ lookup('env', 'INFRA_NODE_STRING_1')|default('worker02-r640', true) }}"
+infra_node_string_1: "{{ lookup('env', 'INFRA_NODE_STRING_1')|default('worker000-r640', true) }}"
+infra_node_string_2: "{{ lookup('env', 'INFRA_NODE_STRING_1')|default('worker001-r640', true) }}"
+workload_node_string: "{{ lookup('env', 'INFRA_NODE_STRING_1')|default('worker002-r640', true) }}"
 
