--- a/ansible-ipi-install/roles/post-install/tasks/main.yml
+++ b/ansible-ipi-install/roles/post-install/tasks/main.yml
@@ -1,15 +1,18 @@
+- name: Wait 7m for all the nodes to settle
+  command: sleep 900
+
 - block:
   - name: Label infra nodes
     shell: |
-       oc label node '{{ infra_node_string_1 }}' 'role.kubernetes.io/infra=' --overwrite 
+       oc label node '{{ infra_node_string_1 }}' 'node-role.kubernetes.io/infra=' --overwrite 
 
   - name: Label infra nodes
     shell: |
-       oc label node '{{ infra_node_string_2 }}' 'role.kubernetes.io/infra=' --overwrite
+       oc label node '{{ infra_node_string_2 }}' 'node-role.kubernetes.io/infra=' --overwrite
 
   - name: Label workload nodes
     shell: |
-       oc label node '{{ workload_node_string }}' 'role.kubernetes.io/workload=' --overwrite
+       oc label node '{{ workload_node_string }}' 'node-role.kubernetes.io/workload=' --overwrite
   when: infra_node_string_1 != "" or infra_node_string_2 != "" or workload_node_string != ""
 
 - name: OVN block
@@ -30,35 +33,19 @@
   - name: Wait for OVNK new master images to roll out
     command: oc rollout status -n {{ ovn_namespace }} ds/ovnkube-master
   
-  - name: OVN SBDB block
-    block:
-    - name: Deploy ovnkube-sbdb-relay
-      script: sbdb-relay.sh deploy
-    
-    - name: Wait for OVNK sbdb-relay images to roll out
-      command: oc rollout status -n {{ ovn_namespace }} deployment.apps/ovnkube-sbdb-relay
-    
-    - name: Verify ovnkube-sbdb-relay connectivity
-      script: sbdb-relay.sh verify
-    when: openshift_toggle_ovn_relay|bool
-  environment:
-    KUBECONFIG: "{{ kubeconfig_path }}"
-  when: openshift_toggle_ovn_patch|bool
-
-
 - name: Relabel the infra nodes
   shell: |
     oc label nodes --overwrite -l 'node-role.kubernetes.io/infra=' node-role.kubernetes.io/worker-
   environment:
     KUBECONFIG: "{{ kubeconfig_path }}"
-  when: openshift_toggle_infra_node|bool
+  when: infra_node_string_1 != "" or infra_node_string_2 != ""
 
 - name: Relabel the workload node
   shell: |
     oc label nodes --overwrite -l 'node-role.kubernetes.io/workload=' node-role.kubernetes.io/worker-
   environment:
     KUBECONFIG: "{{ kubeconfig_path }}"
-  when: openshift_toggle_workload_node|bool
+  when: workload_node_string != ""
 
 - name: Add additional label to worker nodes to provide ablity to isolate workloads on workers
   shell: |
@@ -71,14 +58,25 @@
     oc adm taint node -l node-role.kubernetes.io/workload= role=workload:NoSchedule --overwrite=true
   environment:
     KUBECONFIG: "{{ kubeconfig_path }}"
-  when: openshift_toggle_workload_node|bool
+  when: workload_node_string != ""
 
-- name: Copy new cluster-monitoring-config
-  kubernetes.core.k8s:
-    kubeconfig: "{{ kubeconfig_path }}"
-    name: openshift-windows-machine-config-operator
-    template: cluster-monitoring-config.yml.j2
-  when: openshift_toggle_infra_node|bool
+- block:
+  - name: Copy new cluster-monitoring-config
+    template:
+      src: cluster-monitoring-config.yml.j2
+      dest: "{{ ansible_user_dir }}/cluster-monitoring-config.yml"
+    register: copy_yaml
+  
+  - set_fact:
+      cluster_monitoring_yaml_path: "{{ copy_yaml.dest }}"
+
+  - name: Replace the cluster-monitoring-config ConfigMap
+    shell: |
+      oc create -f {{ cluster_monitoring_yaml_path }}
+    ignore_errors: yes
+    environment:
+      KUBECONFIG: "{{ kubeconfig_path }}"
+  when: infra_node_string_1 != "" or infra_node_string_2 != ""
 
 - name: Apply new nodeSelector to infra workload components
   shell: |
@@ -92,7 +90,7 @@
 
   environment:
     KUBECONFIG: "{{ kubeconfig_path }}"
-  when: openshift_toggle_infra_node|bool
+  when: infra_node_string_1 != "" or infra_node_string_2 != ""
 
 
 - name: Deploy dittybopper
