--- a/ansible-ipi-install/roles/bootstrap/tasks/10_load_inv.yml
+++ b/ansible-ipi-install/roles/bootstrap/tasks/10_load_inv.yml
@@ -119,25 +119,23 @@
 
 # This works!
 - block:
-  - name: print r640s
+  # If possible add an additional check that the number of control-plane nodes is at least 3
+  - name: print control-plane-nodes
     set_fact:
-        machines_r640s: "{{ ocp_node_content | to_json | from_json | community.general.json_query(server_name_query) }}"
+        control_plane_machines: "{{ ocp_node_content | to_json | from_json | community.general.json_query(server_name_query) }}"
     vars:
-      server_name_query: "nodes[?contains(pm_addr, '{{ node_string }}' )]"
-      node_string: "r640"
+      server_name_query: "nodes[?contains(pm_addr, '{{ control_plane_hardware_type }}' )]"
 
-  - name: print 5039ms
+  - name: print worker nodes
     set_fact:
-        machines_5039ms: "{{ ocp_node_content | to_json | from_json | community.general.json_query(server_name_query) }}"
+        worker_node_machines: "{{ ocp_node_content | to_json | from_json | community.general.json_query(server_name_query) }}"
     vars:
-      server_name_query: "nodes[?contains(pm_addr, '{{ node_string }}' )]"
-      node_string: "5039ms"
+      server_name_query: "nodes[?contains(pm_addr, '{{ workers_hardware_type }}' )]"
 
   - name: set ordered ocp_node_content
     set_fact:
-      ocp_node_content: "{ 'nodes': {{ machines_r640s | union( machines_5039ms ) }} }"
-  when: cloud_name == "cloud40"
-
+      ocp_node_content: "{ 'nodes': {{ control_plane_machines | union( worker_node_machines ) }} }"
+  when: control_plane_hardware_type != ""
 - name: dump deploying master nodes to a file
   copy:
     dest: "/tmp/metadata.txt"
