--- a/ansible-ipi-install/group_vars/all.yml
+++ b/ansible-ipi-install/group_vars/all.yml
@@ -57,3 +57,8 @@ infra_node_string_1: "{{ lookup('env', 'INFRA_NODE_STRING_1')|default('worker000
 infra_node_string_2: "{{ lookup('env', 'INFRA_NODE_STRING_1')|default('worker001-r640', true) }}"
 workload_node_string: "{{ lookup('env', 'INFRA_NODE_STRING_1')|default('worker002-r640', true) }}"
 
+# If you wish to sort the machines in the Quads inventory by machine type, set these fields to pick which machines you want first
+# (i.e. control plane) and the remaining machines will come next (workers).  The code around these variables assumes a cluster
+# only has two different hardwares and that there are at least 3 of the control_plane_hardware_type to have 3 masters.
+#control_plane_hardware_type: r640
+#workers_hardware_type: 5039ms
