--- a/ansible-ipi-install/group_vars/all.yml
+++ b/ansible-ipi-install/group_vars/all.yml
@@ -60,5 +60,5 @@ workload_node_string: "{{ lookup('env', 'INFRA_NODE_STRING_1')|default('worker00
 # If you wish to sort the machines in the Quads inventory by machine type, set these fields to pick which machines you want first
 # (i.e. control plane) and the remaining machines will come next (workers).  The code around these variables assumes a cluster
 # only has two different hardwares and that there are at least 3 of the control_plane_hardware_type to have 3 masters.
-#control_plane_hardware_type: r640
-#workers_hardware_type: 5039ms
+control_plane_hardware_type: "{{ lookup('env', 'CONTROL_PLANE_HARDWARE_TYPE')|default('', true) }}"
+workers_hardware_type: "{{ lookup('env', 'WORKERS_HARDWARE_TYPE')|default('', true) }}"
