add optional post install tasks (#249)
* add post_install tasks

* Order dells then supermicros for cloud40 only

* WIP - changes to test cluster-monitoring

* f python, vars

* remove persistent monitoring

* image-registry is Removed by default on bare metal installs

* f - add some other missing monitoring components

* defaults for toggles

* revert python interpreter

* vars and some fixes

* Apply suggestions from code review

Co-authored-by: Raúl Sevilla <rsevilla@redhat.com>

* Add variables for inventory hardware type sort.

* Add a default for new vars

* Check if defined.

* fix ovn block and infra/wkld vars

* add condition to OVN block

Co-authored-by: Andrew Collins <ancollin@redhat.com>
Co-authored-by: Raúl Sevilla <rsevilla@redhat.com>

--- a/ansible-ipi-install/roles/bootstrap/tasks/10_load_inv.yml
+++ b/ansible-ipi-install/roles/bootstrap/tasks/10_load_inv.yml
@@ -117,6 +117,26 @@
     lab_vars: "{{ (lab_name == 'scale') | ternary(scale, alias) }}"
   when: lab_name in ['scale', 'alias']
 
+# This works!
+- block:
+  # If possible add an additional check that the number of control-plane nodes is at least 3
+  - name: print control-plane-nodes
+    set_fact:
+        control_plane_machines: "{{ ocp_node_content | to_json | from_json | community.general.json_query(server_name_query) }}"
+    vars:
+      server_name_query: "nodes[?contains(pm_addr, '{{ control_plane_hardware_type }}' )]"
+
+  - name: print worker nodes
+    set_fact:
+        worker_node_machines: "{{ ocp_node_content | to_json | from_json | community.general.json_query(server_name_query) }}"
+    vars:
+      server_name_query: "nodes[?contains(pm_addr, '{{ workers_hardware_type }}' )]"
+
+  - name: set ordered ocp_node_content
+    set_fact:
+      ocp_node_content: "{ 'nodes': {{ control_plane_machines | union( worker_node_machines ) }} }"
+  when: control_plane_hardware_type is defined and control_plane_hardware_type != ""
+
 - name: dump deploying master nodes to a file
   copy:
     dest: "/tmp/metadata.txt"
