Enable pipelining and replace callback_whitelist by callbacks_enabled to supress deprecation warning
Signed-off-by: Raul Sevilla <rsevilla@redhat.com>

--- a/ansible-ipi-install/ansible.cfg
+++ b/ansible-ipi-install/ansible.cfg
@@ -1,7 +1,8 @@
 [defaults]
 inventory=./inventory
 remote_user=kni
-callback_whitelist = profile_tasks
+callbacks_enabled=profile_tasks
+pipelining=true
 
 [privilege_escalation]
 become_method=sudo
