--- a/ansible-ipi-install/ansible.cfg
+++ b/ansible-ipi-install/ansible.cfg
@@ -2,6 +2,7 @@
 inventory=./inventory
 remote_user=kni
 callback_whitelist = profile_tasks
+log_path = ~/.ansible.log
 
 [privilege_escalation]
 become_method=sudo
