--- a/ansible-ipi-install/roles/shared-labs-prep/tasks/main.yml
+++ b/ansible-ipi-install/roles/shared-labs-prep/tasks/main.yml
@@ -74,7 +74,7 @@
     autoconnect: yes
     stp: off
     ip4_method: manual
-    ip4: "{{ extcidrnet | next_nth_usable(1) }}/{{ extcidrnet | ipaddr('prefix') }}"
+    ip4: "{{ extcidrnet | ansible.utils.next_nth_usable(1) }}/{{ extcidrnet | ansible.utils.ipaddr('prefix') }}"
     ip6_method: disabled
     state: present
   become: yes
@@ -88,9 +88,9 @@
     autoconnect: yes
     stp: off
     ip4_method: manual
-    ip4: "{{ extcidrnet | next_nth_usable(1) }}/{{ extcidrnet | ipaddr('prefix') }}"
+    ip4: "{{ extcidrnet | ansible.utils.next_nth_usable(1) }}/{{ extcidrnet | ansible.utils.ipaddr('prefix') }}"
     state: present
-    ip6: "{{ extcidrnet6 | next_nth_usable(1) }}/{{ extcidrnet6 | ipaddr('prefix') }}"
+    ip6: "{{ extcidrnet6 | ansible.utils.next_nth_usable(1) }}/{{ extcidrnet6 | ansible.utils.ipaddr('prefix') }}"
     ip6_method: manual
   become: yes
   when: ipv6_enabled|bool and dualstack_baremetal|bool
