--- a/ansible-ipi-install/playbook-jetski.yml
+++ b/ansible-ipi-install/playbook-jetski.yml
@@ -17,7 +17,7 @@
     - { role: set-deployment-facts }
     - { role: network-discovery }
     - { role: shared-labs-prep }
-    - { role: redhatci.ocp.node-prep }
+    - { role: redhatci.ocp.node_prep }
     - { role: redhatci.ocp.installer }
     - { role: post-install, when: post_install | bool }
     - { role: routable_api, when: routable_api | bool }
