--- a/ansible-ipi-install/roles/bootstrap/tasks/55_add_ocp_masters.yml
+++ b/ansible-ipi-install/roles/bootstrap/tasks/55_add_ocp_masters.yml
@@ -13,7 +13,7 @@
     baremetal_nic: "{{ node_item.bm_nic }}"
     hardware_profile: "default"
     poweroff: true
-  loop: "{{ deploying_master_nodes_content }}"
+  loop: "{{ deploying_master_nodes_content['nodes'] }}"
   loop_control:
     index_var: node_index
     loop_var: node_item 
