--- a/ansible-ipi-install/roles/shared-labs-prep/vars/main.yml
+++ b/ansible-ipi-install/roles/shared-labs-prep/vars/main.yml
@@ -13,7 +13,6 @@ yum_packages:
   - python3-requests
   - sshpass
   - make
-rdo_packages:
-  - https://trunk.rdoproject.org/rhel8-master/deps/latest/Packages/python3-crypto-2.6.1-18.el8ost.x86_64.rpm
-  - https://trunk.rdoproject.org/rhel8-master/deps/latest/Packages/python3-pyghmi-1.0.22-2.el8ost.noarch.rpm
+rdo_packages: [] 
+
 badfish_podman_cmd: "podman run --pull=always --rm quay.io/quads/badfish -u {{ lab_ipmi_user }} -p {{ lab_ipmi_password }} -i config/idrac_interfaces.yml -H mgmt-"
